# waypoint_navigation

./: CMakeLists.txt  README.md  package.xml
config/: input_filters_velodyne_puck.yaml  param_simulation.yaml
launch/: goal_publisher.launch  icp_node.launch  waypoint_navigation.launch  waypoint_navigation_simulation.launch
launch/include/: move_base.launch  waypoint.rviz
params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  goals.yaml
src/: goal_publisher.cpp
urdf/: camera.urdf.xacro  jackal_velodyne.urdf.xacro
worlds/: blank_map.pgm  blank_map.yaml  simulation.world
